--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -34,9 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import pandas as pd"
    ]
   },
   {
@@ -54,7 +52,7 @@
    "source": [
     "train_data = pd.read_csv('training.csv')\n",
     "\n",
-    "## train data is our dataframe, and we will make necesary changes to this data frame to clean our data\n"
+    "## we read the training data from the csv and assigned it as a dataframe: and we will make necesary changes to this data-frame to clean our data\n"
    ]
   },
   {
