--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2-final"
+   "version": "3.8.9-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python392jvsc74a57bd0ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963",
-   "display_name": "Python 3.9.2 64-bit"
+   "name": "python389jvsc74a57bd09687db10b31693f3c59eabc6c1cee59a08ac30446d3a4b6004efe89aebdb61cf",
+   "display_name": "Python 3.8.9 64-bit ('env')"
   }
  },
  "nbformat": 4,
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = pd.read_csv('training.csv')\n",
+    "train_data = pd.read_csv('datasets/training.csv')\n",
     "\n",
     "## we read the training data from the csv and assigned it as a dataframe: and we will make necesary changes to this data-frame to clean our data\n"
    ]
@@ -236,10 +236,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data.to_csv('clean.csv', index= False )\n",
+    "train_data.to_csv('datasets/clean.csv', index= False )\n",
     "\n",
     "## saves the cleaned dataframe to a csv file"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
