--- a/data_augmentation.ipynb
+++ b/data_augmentation.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('datasets/clean.csv')\n",
+    "df = pd.read_csv('datasets/train.csv')\n",
     "\n",
     "## read from the csv file"
    ]
