--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = pd.read_csv('datasets/training.csv')\n",
+    "train_data = pd.read_csv('datasets/original.csv')\n",
     "\n",
     "## we read the training data from the csv and assigned it as a dataframe: and we will make necesary changes to this data-frame to clean our data\n"
    ]
@@ -236,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data.to_csv('datasets/clean.csv', index= False )\n",
+    "train_data.to_csv('datasets/train.csv', index= False )\n",
     "\n",
     "## saves the cleaned dataframe to a csv file"
    ]
