added glass overlay

--- a/deployment.ipynb
+++ b/deployment.ipynb
@@ -16,6 +16,11 @@
   "kernelspec": {
    "name": "python389jvsc74a57bd0e514e8fb66f3ffe4f97051a3575f23813373bb532cd5a243c27d050192f765fb",
    "display_name": "Python 3.8.9 64-bit ('env')"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "1baa965d5efe3ac65b79dfc60c0d706280b1da80fedb7760faf2759126c4f253"
+   }
   }
  },
  "nbformat": 4,
@@ -52,51 +57,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# capture = cv2.VideoCapture(0)\n",
+    "capture = cv2.VideoCapture(0)\n",
     "\n",
-    "# while True :\n",
-    "#     ret, image = capture.read()\n",
+    "while True :\n",
+    "    ret, image = capture.read()\n",
     "\n",
-    "#     gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-    "#     faces = face_cascade.detectMultiScale(gray, 1.3, 5)\n",
+    "    gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "    faces = face_cascade.detectMultiScale(gray, 1.3, 5)\n",
     "     \n",
-    "#     for (x, y, w, h) in faces:\n",
-    "#         # cv2.rectangle(image, (x,y), (x+w, y+h), (255, 0, 0), 2)\n",
-    "#         roi_gray = gray[y:y+h, x:x+w]\n",
-    "#         roi_color = image[y:y+h, x:x+w]\n",
+    "    for (x, y, w, h) in faces:\n",
+    "        def transparentOverlay(src, overlay, pos=(0,0), scale = 1):\n",
+    "            overlay = cv2.resize(overlay, (0,0), fx=scale, fy=scale)\n",
+    "            h, w, _ = overlay.shape  # Size of foreground\n",
+    "            rows, cols, _ = src.shape  # Size of background Image\n",
+    "            y,x = pos[0],pos[1]    # Position of foreground/overlay image\n",
+    "            \n",
+    "            #loop over all pixels and apply the blending equation\n",
+    "            for i in range(h):\n",
+    "                for j in range(w):\n",
+    "                    if x+i >= rows or y+j >= cols:\n",
+    "                        continue\n",
+    "                    alpha = float(overlay[i][j][3]/255.0) # read the alpha channel \n",
+    "                    src[x+i][y+j] = alpha*overlay[i][j][:3]+(1-alpha)*src[x+i][y+j]\n",
+    "            return src\n",
+    "\n",
+    "\n",
+    "        # cv2.rectangle(image, (x,y), (x+w, y+h), (255, 0, 0), 2)\n",
+    "        roi_gray = gray[y:y+h, x:x+w]\n",
+    "        roi_color = image[y:y+h, x:x+w]\n",
     "        \n",
-    "#         width_original = roi_gray.shape[1] \n",
-    "#         height_original = roi_gray.shape[0]\n",
+    "        width_original = roi_gray.shape[1] \n",
+    "        height_original = roi_gray.shape[0]\n",
     "\n",
-    "#         img_gray = cv2.resize(roi_gray, (96, 96))\n",
-    "#         img_gray = img_gray/255\n",
+    "        img_gray = cv2.resize(roi_gray, (96, 96))\n",
+    "        img_gray = img_gray/255\n",
     "        \n",
-    "#         img_model = np.reshape(img_gray, (1,96,96,1))\n",
-    "#         keypoints = model.predict(img_model)[0]\n",
+    "        img_model = np.reshape(img_gray, (1,96,96,1))\n",
+    "        keypoints = model.predict(img_model)[0]\n",
     "        \n",
-    "#         x_coords = keypoints[0::2]\n",
-    "#         y_coords = keypoints[1::2]\n",
+    "        x_coords = keypoints[0::2]\n",
+    "        y_coords = keypoints[1::2]\n",
     "\n",
-    "#         x_coords_denormalized = (x_coords / 96) * width_original + x \n",
-    "#         y_coords_denormalized = (y_coords / 96) * height_original + y\n",
+    "        x_coords_denormalized = (x_coords / 96) * width_original + x \n",
+    "        y_coords_denormalized = (y_coords / 96) * height_original + y\n",
     "\n",
-    "#         for i in range(15) :\n",
-    "#             cv2.circle(image, (round(x_coords_denormalized[i]), round(y_coords_denormalized[i])), 2, (255, 255, 0), -1)\n",
+    "        # for i in range(15) :\n",
+    "        #     cv2.circle(image, (round(x_coords_denormalized[i]), round(y_coords_denormalized[i])), 2, (255, 255, 0), -1)\n",
     "\n",
+    "        ## Coordinates for each facial keypoint\n",
     "\n",
-    "#     cv2.imshow('Webcam',image)\n",
+    "        left_eye_center = (round(x_coords_denormalized[0]), round(y_coords_denormalized[0]))\n",
+    "        right_eye_center = (round(x_coords_denormalized[1]), round(y_coords_denormalized[1]))\n",
+    "        left_eye_inner_corner = (round(x_coords_denormalized[2]), round(y_coords_denormalized[2]))\n",
+    "        left_eye_outer_corner = (round(x_coords_denormalized[3]), round(y_coords_denormalized[3]))\n",
+    "        right_eye_inner_corner = (round(x_coords_denormalized[4]), round(y_coords_denormalized[4]))\n",
+    "        right_eye_outer_corner = (round(x_coords_denormalized[5]), round(y_coords_denormalized[5]))\n",
+    "        left_eyebrows_inner_end = (round(x_coords_denormalized[6]), round(y_coords_denormalized[6]))\n",
+    "        left_eyebrows_outer_end = (round(x_coords_denormalized[7]), round(y_coords_denormalized[7]))\n",
+    "        right_eyebrows_inner_end = (round(x_coords_denormalized[8]), round(y_coords_denormalized[8]))\n",
+    "        right_eyebrows_outer_end = (round(x_coords_denormalized[9]), round(y_coords_denormalized[9]))\n",
+    "        nose_tip = (round(x_coords_denormalized[10]), round(y_coords_denormalized[10]))\n",
+    "        mouth_left_corner = (round(x_coords_denormalized[11]), round(y_coords_denormalized[11]))\n",
+    "        mouth_right_corner = (round(x_coords_denormalized[12]), round(y_coords_denormalized[12]))\n",
+    "        mouth_center_top_lip = (round(x_coords_denormalized[13]), round(y_coords_denormalized[13]))\n",
+    "        mouth_center_bottom_lip = (round(x_coords_denormalized[14]), round(y_coords_denormalized[14]))\n",
     "\n",
-    "#     if cv2.waitKey(1) & 0xFF == ord(\"q\") :\n",
-    "#         break\n",
+    "        ## Adding Glass Filter\n",
     "\n",
-    "# capture.release()\n",
-    "# cv2.destroyAllWindows()\n"
+    "        glasses_width =  max(1, abs(left_eye_outer_corner[0] - right_eye_outer_corner[0]))\n",
+    "        glasses = cv2.imread('images\\sunglasses.png', -1)\n",
+    "        glasses = cv2.resize(glasses, (round(glasses_width * 1.5), 75))\n",
+    "\n",
+    "        image = transparentOverlay(image, glasses, (right_eyebrows_outer_end[0] - 15, right_eyebrows_outer_end[1] - 20))\n",
+    "\n",
+    "    cv2.imshow('Webcam',image)\n",
+    "\n",
+    "    if cv2.waitKey(1) & 0xFF == ord(\"q\") :\n",
+    "        break\n",
+    "\n",
+    "capture.release()\n",
+    "cv2.destroyAllWindows()\n"
    ]
   },
   {
