--- a/deployment.ipynb
+++ b/deployment.ipynb
@@ -15,7 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python389jvsc74a57bd0e514e8fb66f3ffe4f97051a3575f23813373bb532cd5a243c27d050192f765fb",
-   "display_name": "Python 3.8.9 64-bit ('env')"
+   "display_name": "Python 3.8.9 64-bit ('env')",
+   "language": "python"
   },
   "metadata": {
    "interpreter": {
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
@@ -72,11 +73,10 @@
     "    faces = face_cascade.detectMultiScale(gray, 1.3, 5)\n",
     "     \n",
     "    for (x, y, w, h) in faces:\n",
-    "        def transparentOverlay(src, overlay, pos=(0,0), scale = 1):\n",
-    "            overlay = cv2.resize(overlay, (0,0), fx=scale, fy=scale)\n",
+    "        def transparentOverlay(src, overlay, pos=(0,0)):\n",
     "            h, w, _ = overlay.shape  # Size of foreground\n",
     "            rows, cols, _ = src.shape  # Size of background Image\n",
-    "            y,x = pos[0],pos[1]    # Position of foreground/overlay image\n",
+    "            y, x = pos[0], pos[1]    # Position of foreground/overlay image\n",
     "            \n",
     "            #loop over all pixels and apply the blending equation\n",
     "            for i in range(h):\n",
@@ -84,7 +84,7 @@
     "                    if x+i >= rows or y+j >= cols:\n",
     "                        continue\n",
     "                    alpha = float(overlay[i][j][3]/255.0) # read the alpha channel \n",
-    "                    src[x+i][y+j] = alpha*overlay[i][j][:3]+(1-alpha)*src[x+i][y+j]\n",
+    "                    src[x+i][y+j] = alpha * overlay[i][j][:3] + (1-alpha) * src[x+i][y+j]\n",
     "            return src\n",
     "\n",
     "\n",
@@ -128,13 +128,30 @@
     "        mouth_center_top_lip = (round(x_coords_denormalized[13]), round(y_coords_denormalized[13]))\n",
     "        mouth_center_bottom_lip = (round(x_coords_denormalized[14]), round(y_coords_denormalized[14]))\n",
     "\n",
-    "        ## Adding Glass Filter\n",
+    "        ## Sunglasses Filter\n",
     "\n",
-    "        glasses_width =  max(1, abs(left_eye_outer_corner[0] - right_eye_outer_corner[0]))\n",
-    "        glasses = cv2.imread('images\\sunglasses.png', -1)\n",
-    "        glasses = cv2.resize(glasses, (round(glasses_width * 1.5), 75))\n",
+    "        # glasses_width =  max(1, abs(left_eye_outer_corner[0] - right_eye_outer_corner[0]))\n",
+    "        # glasses = cv2.imread('images\\sunglasses.png', -1)\n",
+    "        # glasses = cv2.resize(glasses, (round(glasses_width * 1.6), round(h/3)))\n",
+    "        # image = transparentOverlay(image, glasses, (right_eyebrows_outer_end[0] - 10, right_eyebrows_outer_end[1] - 10))\n",
+    "        \n",
+    "        ## Pig Nose Filter\n",
     "\n",
-    "        image = transparentOverlay(image, glasses, (right_eyebrows_outer_end[0] - 15, right_eyebrows_outer_end[1] - 20))\n",
+    "        # nose = cv2.imread('images\\pig_nose.png', -1)\n",
+    "        # nose = cv2.resize(nose, (int(w/5), int(h/5)))\n",
+    "        # image = transparentOverlay(image, nose, (nose_tip[0] - int(w/10), nose_tip[1] - int(h/10)))\n",
+    "        \n",
+    "        ## Cat Whisker Filter\n",
+    "\n",
+    "        # whisker = cv2.imread('images\\cat_whisker.png', -1)\n",
+    "        # whisker = cv2.resize(whisker, (int(w), int(h/2)))\n",
+    "        # image = transparentOverlay(image, whisker, (nose_tip[0] - int(w/2), nose_tip[1] - int(h/4)))\n",
+    "\n",
+    "        ## Graduation Cap Filter\n",
+    "\n",
+    "        # grad_cap = cv2.imread('images\\graduation_cap.png', -1)\n",
+    "        # grad_cap = cv2.resize(grad_cap, (w*2, h))\n",
+    "        # image = transparentOverlay(image, grad_cap, (right_eyebrows_outer_end[0] - w + round(w/3), right_eyebrows_outer_end[1] - h))\n",
     "\n",
     "    cv2.imshow('Webcam',image)\n",
     "\n",
