added more filters

--- a/deployment.ipynb
+++ b/deployment.ipynb
@@ -15,8 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python389jvsc74a57bd0e514e8fb66f3ffe4f97051a3575f23813373bb532cd5a243c27d050192f765fb",
-   "display_name": "Python 3.8.9 64-bit ('env')",
-   "language": "python"
+   "display_name": "Python 3.8.9 64-bit ('env')"
   },
   "metadata": {
    "interpreter": {
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -152,6 +151,13 @@
     "        # grad_cap = cv2.imread('images\\graduation_cap.png', -1)\n",
     "        # grad_cap = cv2.resize(grad_cap, (w*2, h))\n",
     "        # image = transparentOverlay(image, grad_cap, (right_eyebrows_outer_end[0] - w + round(w/3), right_eyebrows_outer_end[1] - h))\n",
+    "\n",
+    "        ## Mustache Filter\n",
+    "\n",
+    "        # mustache_width =  max(1, abs(mouth_left_corner[0] - mouth_right_corner[0]))\n",
+    "        # mustache = cv2.imread('images\\mustache.png', -1)\n",
+    "        # mustache = cv2.resize(mustache, (round(mustache_width*2), round(h/1.25)))\n",
+    "        # mustache = transparentOverlay(image, mustache, (mouth_center_top_lip[0] - round(w/3), mouth_center_top_lip[1] - round(h/2.4)))\n",
     "\n",
     "    cv2.imshow('Webcam',image)\n",
     "\n",
