added more filters

--- a/deployment.ipynb
+++ b/deployment.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -142,9 +142,9 @@
     "        \n",
     "        ## Cat Whisker Filter\n",
     "\n",
-    "        # whisker = cv2.imread('images\\cat_whisker.png', -1)\n",
-    "        # whisker = cv2.resize(whisker, (int(w), int(h/2)))\n",
-    "        # image = transparentOverlay(image, whisker, (nose_tip[0] - int(w/2), nose_tip[1] - int(h/4)))\n",
+    "        whisker = cv2.imread('images\\cat_whisker.png', -1)\n",
+    "        whisker = cv2.resize(whisker, (int(w), int(h/2)))\n",
+    "        image = transparentOverlay(image, whisker, (nose_tip[0] - int(w/2), nose_tip[1] - int(h/4)))\n",
     "\n",
     "        ## Graduation Cap Filter\n",
     "\n",
