added more filters

--- a/deployment.ipynb
+++ b/deployment.ipynb
@@ -15,7 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python389jvsc74a57bd0e514e8fb66f3ffe4f97051a3575f23813373bb532cd5a243c27d050192f765fb",
-   "display_name": "Python 3.8.9 64-bit ('env')"
+   "display_name": "Python 3.8.9 64-bit ('env': venv)",
+   "language": "python"
   },
   "metadata": {
    "interpreter": {
@@ -28,7 +29,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {
     "tags": []
    },
@@ -142,9 +143,15 @@
     "        \n",
     "        ## Cat Whisker Filter\n",
     "\n",
-    "        whisker = cv2.imread('images\\cat_whisker.png', -1)\n",
-    "        whisker = cv2.resize(whisker, (int(w), int(h/2)))\n",
-    "        image = transparentOverlay(image, whisker, (nose_tip[0] - int(w/2), nose_tip[1] - int(h/4)))\n",
+    "        # whisker = cv2.imread('images\\cat_whisker.png', -1)\n",
+    "        # whisker = cv2.resize(whisker, (int(w), int(h/2)))\n",
+    "        # image = transparentOverlay(image, whisker, (nose_tip[0] - int(w/2), nose_tip[1] - int(h/4)))\n",
+    "\n",
+    "        ## Dog Filter\n",
+    "\n",
+    "        # dog_filter = cv2.imread('images\\dog_filter_1.png', -1)\n",
+    "        # dog_filter = cv2.resize(dog_filter, (int(w*1.5), int(h*1.25*1.5)))\n",
+    "        # image = transparentOverlay(image, dog_filter, (nose_tip[0] - round(w*0.8), nose_tip[1] - round(h*1.2)))\n",
     "\n",
     "        ## Graduation Cap Filter\n",
     "\n",
@@ -158,6 +165,12 @@
     "        # mustache = cv2.imread('images\\mustache.png', -1)\n",
     "        # mustache = cv2.resize(mustache, (round(mustache_width*2), round(h/1.25)))\n",
     "        # mustache = transparentOverlay(image, mustache, (mouth_center_top_lip[0] - round(w/3), mouth_center_top_lip[1] - round(h/2.4)))\n",
+    "\n",
+    "        ## Clown Wig Filter\n",
+    "\n",
+    "        # clown_wig = cv2.imread('images\\clown_wig.png', -1)\n",
+    "        # clown_wig = cv2.resize(clown_wig, (round(w*1.6), round(h*1.2)))\n",
+    "        # image = transparentOverlay(image, clown_wig, (right_eyebrows_outer_end[0] - round(w*0.55), right_eyebrows_outer_end[1] - h))\n",
     "\n",
     "    cv2.imshow('Webcam',image)\n",
     "\n",
